2010-05-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] For collecting deltas, replace file-static var w/ local var.

	* ci.c (gendeltas): Delete var.
	(addelta): Take ‘struct hshentries **’; pass it to ‘gr_revno’.
	(main): Use local var for collecting deltas; update call to ‘addelta’.
	* co.c (gendeltas): Delete var.
	(main): Use local var for collecting deltas.
	* rcs.c (gendeltas): Delete var.
	(removerevs, main): Use local var for collecting deltas.

2010-05-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: delta_from_ref

	* base.h (delta_from_ref): New func decl.
	* rcsrev.c (delta_from_ref): New func.
	(branchtip): Use ‘delta_from_ref’.
	* ci.c (addbranch, main): Likewise.
	* co.c (addjoin): Likewise.
	* rcs.c (setlock, dolocks, domessages, rcs_setstate): Likewise.
	* rcsdiff.c (main): Likewise.
	* rcsmerge.c (main): Likewise.

2010-05-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Fix bug: Resolve ‘BRNUM.’ correctly.

	Regression introduced 2010-04-21, "Add abstraction: fully_numeric".
	* rcsrev.c (fully_numeric): When expanding "BRNUM."--note
	trailing dot--append only the non-branch part of the tip revision.

2010-05-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Make ‘genrevs’, ‘gr_revno’ able to inhibit storing.

	* rcsrev.c (STORE_MAYBE, CLEAR_MAYBE): New macros.
	(genbranch, genrevs): Use ‘STORE_MAYBE’, ‘CLEAR_MAYBE’.
	(branchtip): Update call to ‘gr_revno’ to specify no storage.
	* co.c (addjoin): Likewise.
	* rcsdiff.c (main): Likewise.
	* rcsmerge.c (main): Likewise.

2010-05-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Avoid ‘next’ as a local variable name.

	* rcsedit.c (checkaccesslist): Rewrite ‘do-while’ as ‘for’ loop.
	* rcsrev.c (genbranch, genrevs): Rename local var ‘next’ to ‘d’.
	(rev_from_symbol): Rename local var ‘next’ to ‘ls’.

2010-05-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘struct wlink’ for hash table buckets.

	* base.h (struct hshentry): Delete member ‘nexthsh’.